pa3/cool.output
Terminals unused in grammar

   ERROR


State 21 conflicts: 1 shift/reduce
State 139 conflicts: 9 shift/reduce
State 151 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class class_list

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | error ';'

    7 dummy_feature_list: /* empty */
    8                   | dummy_feature_list feature ';'
    9                   | error ';' dummy_feature_list

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expr

   14 formal_list: formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 branch: OBJECTID ':' TYPEID DARROW expr ';'

   18 branch_list: branch
   19            | branch_list branch

   20 expr_plus_list: expr
   21               | expr_plus_list ',' expr

   22 expr_statements: expr ';'
   23                | expr ';' expr_statements
   24                | error ';' expr_statements

   25 let_: OBJECTID ':' TYPEID IN expr
   26     | OBJECTID ':' TYPEID ASSIGN expr IN expr
   27     | OBJECTID ':' TYPEID ',' let_
   28     | OBJECTID ':' TYPEID ASSIGN expr ',' let_
   29     | error ',' let_

   30 expr: OBJECTID ASSIGN expr
   31     | OBJECTID '(' ')'
   32     | OBJECTID '(' expr_plus_list ')'
   33     | expr '.' OBJECTID '(' ')'
   34     | expr '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr '.' OBJECTID '(' expr_plus_list ')'
   36     | expr '@' TYPEID '.' OBJECTID '(' expr_plus_list ')'
   37     | LET let_
   38     | IF expr THEN expr ELSE expr FI
   39     | CASE expr OF branch_list ESAC
   40     | WHILE expr LOOP expr POOL
   41     | '{' expr_statements '}'
   42     | '{' error '}'
   43     | NEW TYPEID
   44     | ISVOID expr
   45     | expr '+' expr
   46     | expr '-' expr
   47     | expr '*' expr
   48     | expr '/' expr
   49     | '~' expr
   50     | expr '<' expr
   51     | expr LE expr
   52     | expr '=' expr
   53     | NOT expr
   54     | '(' expr ')'
   55     | OBJECTID
   56     | INT_CONST
   57     | STR_CONST
   58     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 11 31 32 33 34 35 36 54
')' (41) 10 11 31 32 33 34 35 36 54
'*' (42) 47
'+' (43) 45
',' (44) 15 21 27 28 29
'-' (45) 46
'.' (46) 33 34 35 36
'/' (47) 48
':' (58) 10 11 12 13 16 17 25 26 27 28
';' (59) 4 5 6 8 9 17 22 23 24
'<' (60) 50
'=' (61) 52
'@' (64) 34 36
'{' (123) 4 5 10 11 41 42
'}' (125) 4 5 10 11 41 42
'~' (126) 49
error (256) 6 9 24 29 42
CLASS (258) 4 5
ELSE (259) 38
FI (260) 38
IF (261) 38
IN (262) 25 26
INHERITS (263) 5
LET (264) 37
LOOP (265) 40
POOL (266) 40
THEN (267) 38
WHILE (268) 40
CASE (269) 39
ESAC (270) 39
OF (271) 39
DARROW (272) 17
NEW (273) 43
ISVOID (274) 44
STR_CONST (275) 57
INT_CONST (276) 56
BOOL_CONST (277) 58
TYPEID (278) 4 5 10 11 12 13 16 17 25 26 27 28 34 36 43
OBJECTID (279) 10 11 12 13 16 17 25 26 27 28 30 31 32 33 34 35 36 55
ASSIGN (280) 13 26 28 30
NOT (281) 53
LE (282) 51
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
dummy_feature_list (49)
    on left: 7 8 9, on right: 4 5 8 9
feature (50)
    on left: 10 11 12 13, on right: 8
formal_list (51)
    on left: 14 15, on right: 11 15
formal (52)
    on left: 16, on right: 14 15
branch (53)
    on left: 17, on right: 18 19
branch_list (54)
    on left: 18 19, on right: 19 39
expr_plus_list (55)
    on left: 20 21, on right: 21 32 35 36
expr_statements (56)
    on left: 22 23 24, on right: 23 24 41
let_ (57)
    on left: 25 26 27 28 29, on right: 27 28 29 37
expr (58)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58, on right: 10 11 13 17 20 21 22
    23 25 26 28 30 33 34 35 36 38 39 40 44 45 46 47 48 49 50 51 52
    53 54


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error . ';'

    ';'  shift, and go to state 6


state 2

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .

    $default  reduce using rule 1 (program)


state 5

    2 class_list: class .
    3           | class . class_list

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 2 (class_list)

    class_list  go to state 9
    class       go to state 5


state 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


state 7

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class class_list .

    $default  reduce using rule 3 (class_list)


state 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 11

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (dummy_feature_list)
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 14


state 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 15


state 13

    9 dummy_feature_list: error . ';' dummy_feature_list

    ';'  shift, and go to state 16


state 14

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    8 dummy_feature_list: dummy_feature_list . feature ';'

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 18

    feature  go to state 19


state 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (dummy_feature_list)
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 20


state 16

    9 dummy_feature_list: error ';' . dummy_feature_list

    error  shift, and go to state 13

    OBJECTID  reduce using rule 7 (dummy_feature_list)
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 21


state 17

   10 feature: OBJECTID . '(' ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


state 18

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 24


state 19

    8 dummy_feature_list: dummy_feature_list feature . ';'

    ';'  shift, and go to state 25


state 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    8 dummy_feature_list: dummy_feature_list . feature ';'

    OBJECTID  shift, and go to state 17
    '}'       shift, and go to state 26

    feature  go to state 19


state 21

    8 dummy_feature_list: dummy_feature_list . feature ';'
    9                   | error ';' dummy_feature_list .

    OBJECTID  shift, and go to state 17

    OBJECTID  [reduce using rule 9 (dummy_feature_list)]
    $default  reduce using rule 9 (dummy_feature_list)

    feature  go to state 19


state 22

   10 feature: OBJECTID '(' . ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 27
    ')'       shift, and go to state 28

    formal_list  go to state 29
    formal       go to state 30


state 23

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 31


state 24

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 25

    8 dummy_feature_list: dummy_feature_list feature ';' .

    $default  reduce using rule 8 (dummy_feature_list)


state 26

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 32


state 27

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


state 28

   10 feature: OBJECTID '(' ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 34


state 29

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 35
    ','  shift, and go to state 36


state 30

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


state 31

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 37

    $default  reduce using rule 12 (feature)


state 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 33

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


state 34

   10 feature: OBJECTID '(' ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 39


state 35

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 40


state 36

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 27

    formal  go to state 41


state 37

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 56


state 38

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


state 39

   10 feature: OBJECTID '(' ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 57


state 40

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 58


state 41

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


state 42

   38 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 59


state 43

   37 expr: LET . let_

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    let_  go to state 62


state 44

   40 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 63


state 45

   39 expr: CASE . expr OF branch_list ESAC

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 64


state 46

   43 expr: NEW . TYPEID

    TYPEID  shift, and go to state 65


state 47

   44 expr: ISVOID . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 66


state 48

   57 expr: STR_CONST .

    $default  reduce using rule 57 (expr)


state 49

   56 expr: INT_CONST .

    $default  reduce using rule 56 (expr)


state 50

   58 expr: BOOL_CONST .

    $default  reduce using rule 58 (expr)


state 51

   30 expr: OBJECTID . ASSIGN expr
   31     | OBJECTID . '(' ')'
   32     | OBJECTID . '(' expr_plus_list ')'
   55     | OBJECTID .

    ASSIGN  shift, and go to state 67
    '('     shift, and go to state 68

    $default  reduce using rule 55 (expr)


state 52

   53 expr: NOT . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 69


state 53

   49 expr: '~' . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 70


state 54

   41 expr: '{' . expr_statements '}'
   42     | '{' . error '}'

    error       shift, and go to state 71
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr_statements  go to state 72
    expr             go to state 73


state 55

   54 expr: '(' . expr ')'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 74


state 56

   13 feature: OBJECTID ':' TYPEID ASSIGN expr .
   33 expr: expr . '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr . '.' OBJECTID '(' expr_plus_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' expr_plus_list ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 13 (feature)


state 57

   10 feature: OBJECTID '(' ')' ':' TYPEID '{' . expr '}'

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 84


state 58

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 85


state 59

   33 expr: expr . '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr . '.' OBJECTID '(' expr_plus_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' expr_plus_list ')'
   38     | IF expr . THEN expr ELSE expr FI
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    THEN  shift, and go to state 86
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 60

   29 let_: error . ',' let_

    ','  shift, and go to state 87


state 61

   25 let_: OBJECTID . ':' TYPEID IN expr
   26     | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   27     | OBJECTID . ':' TYPEID ',' let_
   28     | OBJECTID . ':' TYPEID ASSIGN expr ',' let_

    ':'  shift, and go to state 88


state 62

   37 expr: LET let_ .

    $default  reduce using rule 37 (expr)


state 63

   33 expr: expr . '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr . '.' OBJECTID '(' expr_plus_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' expr_plus_list ')'
   40     | WHILE expr . LOOP expr POOL
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    LOOP  shift, and go to state 89
    LE    shift, and go to state 75
    '<'   shift, and go to state 76
    '='   shift, and go to state 77
    '+'   shift, and go to state 78
    '-'   shift, and go to state 79
    '*'   shift, and go to state 80
    '/'   shift, and go to state 81
    '@'   shift, and go to state 82
    '.'   shift, and go to state 83


state 64

   33 expr: expr . '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr . '.' OBJECTID '(' expr_plus_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' expr_plus_list ')'
   39     | CASE expr . OF branch_list ESAC
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    OF   shift, and go to state 90
    LE   shift, and go to state 75
    '<'  shift, and go to state 76
    '='  shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    '@'  shift, and go to state 82
    '.'  shift, and go to state 83


state 65

   43 expr: NEW TYPEID .

    $default  reduce using rule 43 (expr)


state 66

   33 expr: expr . '.' OBJECTID '(' ')'
   34     | expr . '@' TYPEID '.' OBJECTID '(' ')'
   35     | expr . '.' OBJECTID '(' expr_plus_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' expr_plus_list ')'
   44     | ISVOID expr .
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    '@'  shift, and go to state 82
    '.'  shift, and go to state 83

    $default  reduce using rule 44 (expr)


state 67

   30 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    STR_CONST   shift, and go to state 48
    INT_CONST   shift, and go to state 49
    BOOL_CONST  shift, and go to state 50
    OBJECTID    shift, and go to state 51
    NOT         shift, and go to state 52
    '~'         shift, and go to state 53
    '{'         shift, and go to state 54
    '('         shift, and go to state 55

    expr  go to state 91


state 68

   31 expr: OBJECTID '(' . ')'
   32     | OBJECTID '(' . expr_plus_list ')'
